[project]
name = "wcpan-drive-crypt"
version = "4.1.2"
description = "crypt middleware for wcpan.drive"
license = "MIT"
readme = "README.md"
authors = [
    {name = "Wei-Cheng Pan", email = "legnaleurc@gmail.com"}
]
dynamic = ["classifiers", "requires-python", "dependencies"]

[tool.poetry]
requires-poetry = "^2.1"
packages = [{include = "wcpan"}]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
]

[tool.poetry.dependencies]
python = "^3.12"
wcpan-drive-core = "^4.1.0"
numpy = "^2.2.3"

[tool.poetry.group.dev.dependencies]
black = "^24.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
